# search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  main.cpp  requests.json
GoogleTests/: CMakeLists.txt
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
